--- a/EnterWindow.xaml
+++ b/EnterWindow.xaml
@@ -27,7 +27,7 @@
                 <Button x:Name="BGuest" Content="Enter as guest" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="7" FontSize="15" FontFamily="Comic Sans MS" Click="BGuest_Click"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel x:Name="SPCapcha" Grid.Row="2" Margin="0,-20,0,0">
+        <StackPanel x:Name="SPCapcha" Grid.Row="2" Margin="0,-15,0,0" Panel.ZIndex="-1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-15">
                 <Label x:Name="LCapcha1" Grid.Row="2" Margin="15,10,0,15" Content="C" FontSize="55" FontWeight="Bold" FontFamily="Comic Sans MS" FontStyle="Italic" HorizontalAlignment="Center"/>
                 <Label x:Name="LCapcha2" Grid.Row="2" Margin="15,20,0,15" Content="A" FontSize="55" FontWeight="Bold" FontFamily="Comic Sans MS" FontStyle="Italic" HorizontalAlignment="Center"/>
