--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,8 +22,8 @@
         </StackPanel>
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,15,0,0">
             <Label Margin="0,0,10,0" FontSize="15" FontFamily="Comic Sans MS" Content="Поиск:" VerticalAlignment="Bottom"/>
-            <TextBox x:Name="TBSearch" Width="100" VerticalAlignment="Center" Margin="0,5,5,5" Height="25" VerticalContentAlignment="Center" FontFamily="Comic Sans MS" FontSize="15"/>
-            <ComboBox x:Name="CBManufacturer" Width="150" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Comic Sans MS" FontSize="15">
+            <TextBox x:Name="TBSearch" Width="100" VerticalAlignment="Center" Margin="0,5,5,5" Height="25" VerticalContentAlignment="Center" FontFamily="Comic Sans MS" FontSize="15" TextChanged="TBSearch_TextChanged"/>
+            <ComboBox x:Name="CBManufacturer" Width="150" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Comic Sans MS" FontSize="15" SelectionChanged="CBManufacturer_SelectionChanged">
                 <ComboBoxItem Content="Все производители"/>
                 <ComboBoxItem Content="БТК Текстиль"/>
                 <ComboBoxItem Content="Империя ткани"/>
@@ -41,7 +41,7 @@
             <Image x:Name="Exit" Width="25" Height="25" Source="/exit.png" MouseDown="Exit_MouseDown"/>
         </StackPanel>
         <DataGrid FontFamily="Comic Sans MS" x:Name="DGProduct" Margin="15,0,15,15" AutoGenerateColumns="True" Grid.Row="1" Grid.ColumnSpan="3" Visibility="Hidden"/>
-        <ListBox x:Name="LBProducts" Grid.Row="1" Grid.ColumnSpan="3" Margin="10" FontFamily="Comic Sans MS" FontSize="15">
+        <ListBox x:Name="LBProducts" Grid.Row="1" Grid.ColumnSpan="3" Margin="10" FontFamily="Comic Sans MS" FontSize="15" MouseDown="LBProducts_MouseDown">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
